// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectSelection should render ObjectSelection as read only 1`] = `
<div
  className="col-md-11"
>
  <table
    className="table table-striped table-responsive table-hover"
    style={
      Object {
        "backgroundColor": "white",
      }
    }
  >
    <caption>
      <h4>
        Objekter i denne delhendelsen
      </h4>
    </caption>
    <thead>
      <tr>
        <th />
        <th>
          Museumsnr.
        </th>
        <th>
          Unr.
        </th>
        <th>
          Gjenstand/Takson
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        onClick={[Function]}
      >
        <td
          name="type"
          width={10}
        />
        <td
          name="museumNo"
        >
          MusN11
        </td>
        <td
          name="subNo"
        />
        <td
          name="term"
        >
          Solsikke
        </td>
      </tr>
      <tr
        onClick={[Function]}
      >
        <td
          name="type"
          width={10}
        />
        <td
          name="museumNo"
        >
          MusN13
        </td>
        <td
          name="subNo"
        />
        <td
          name="term"
        >
          Makrellsopp
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ObjectSelection should render ObjectSelection for add and edit 1`] = `
<div
  className="col-md-11"
>
  <table
    className="table table-striped table-responsive table-hover"
    style={
      Object {
        "backgroundColor": "white",
      }
    }
  >
    <caption>
      <h4>
        Hvilke objekter gjelder denne del hendelsen for?
      </h4>
    </caption>
    <thead>
      <tr>
        <th>
          <input
            checked={false}
            className="normalAction"
            disabled={false}
            onChange={[Function]}
            type="checkbox"
          />
        </th>
        <th>
          Museumsnr.
        </th>
        <th>
          Unr.
        </th>
        <th>
          Gjenstand/Takson
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        onClick={[Function]}
      >
        <td
          name="type"
          width={10}
        >
          <input
            checked={true}
            disabled={false}
            type="checkbox"
            value=""
          />
        </td>
        <td
          name="museumNo"
        >
          MusN11
        </td>
        <td
          name="subNo"
        />
        <td
          name="term"
        >
          Solsikke
        </td>
      </tr>
      <tr
        onClick={[Function]}
      >
        <td
          name="type"
          width={10}
        >
          <input
            checked={true}
            disabled={false}
            type="checkbox"
            value=""
          />
        </td>
        <td
          name="museumNo"
        >
          MusN13
        </td>
        <td
          name="subNo"
        />
        <td
          name="term"
        >
          Makrellsopp
        </td>
      </tr>
      <tr
        onClick={[Function]}
      >
        <td
          name="type"
          width={10}
        >
          <input
            checked={false}
            disabled={false}
            type="checkbox"
            value=""
          />
        </td>
        <td
          name="museumNo"
        >
          MusN20
        </td>
        <td
          name="subNo"
        />
        <td
          name="term"
        >
          Ukjent mygg
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
